--- a/parallax-test.html
+++ b/parallax-test.html
@@ -12,45 +12,92 @@
 			height: 100vh;
 			overflow-x: hidden;
 			overflow-y: auto;
+			padding: 0;
+			margin: 0;
 		}
 
 		.p-layer {
-			position: absolute;
-			top: 0;
-			right: 0;
-			bottom: 0;
-			left: 0;
 			padding: 100px;
 		}
 
-		.p-layer-base {
-			transform: translateZ(0);
+		.p-layer-back {
+			transform: translateZ(-5px) scale(6);
+			background: green;
+			position: absolute;
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 0;
+		}
+
+		/*actual elements*/
+		.p-layer-one {
 			height: 100px;
 			width: 100px;
 			background: red;
 			margin-top: 200px;
 			margin-left: 20px;
+			transform: translateZ(0);
 		}
 
-		.p-layer-back {
+		.p-layer-two {
+			height: 100px;
+			width: 100px;
+			background: blue;
+			margin-top: 500px;
+			margin-left: 500px;
 			transform: translateZ(-1px) scale(2);
-			background: green;
+		}
+
+		.p-layer-three {
+			height: 50px;
+			width: 300px;
+			background: yellow;
+			position: absolute;
+			top: 1000px;
+			transform: translateZ(-0px) scale(1);
+		}
+
+		.p-layer-four {
+			height: 100px;
+			width: 100px;
+			background: orange;
+			position: absolute;
+			top: 1500px;
+			right: 0px;
+			transform: translateZ(-1px) scale(2);
 		}
 
 	</style>
 </head>
 <body>
 	<div class="parallax">
-	<div class="p-layer p-layer-back">
-			this is the back later <br>
-			this is the back later <br>
-			this is the back later <br>
-			this is the back later <br>
-			this is the back later <br>
-			this is the back later <br>this is the back later <br>this is the back later <br>this is the back later <br>
+		<div class="p-layer p-layer-back">
+			this is the back layer <br>
+			this is the back layer <br>
+			this is the back layer <br>
+			this is the back layer <br>
+			this is the back layer <br>
+			this is the back layer <br>
+			this is the back layer <br>
+			this is the back layer <br>
+			this is the back layer <br>
+			this is the back layer <br>
+			this is the back layer <br>
+			this is the back layer <br>
+			this is the back layer <br>
 		</div>
-		<div class="p-layer p-layer-base">
-			this is the base later
+		<div class="p-layer p-layer-one">
+			this is the base layer
+		</div>
+		<div class="p-layer p-layer-two">
+			this is the base layer
+		</div>
+		<div class="p-layer p-layer-three">
+			this is the base layer
+		</div>
+		<div class="p-layer p-layer-four">
+			this is the base layer
 		</div>
 	</div>
 </body>
