better quality video and some css changes

--- a/vivian.html
+++ b/vivian.html
@@ -118,7 +118,7 @@
 			<img src="img/video-replay.png" alt="replay video button" id="button-replay">
 			<a id="skip-video-link" class="text-link" href="#story-vivian">Already seen this? Skip this video.</a>
 		</div>
-		<div id="story-vivian" style="height: 2000px">
+		<div id="story-vivian" class="container-story" style="height: 2000px">
 			<p>asdlfjasldfjalsdfjalsfjasldf</p>
 		</div>
 		<video id="video-vivian-outro">
