--- a/vivian.html
+++ b/vivian.html
@@ -1,119 +1,108 @@
 <html>
 <head>
 	<link rel="stylesheet" href="css/main.css">
-	<style type="text/css">
-		/* --------------------- specific elements ------------------- */
-
-		#esl-levels-para {
-		  margin: auto;
-		  width: 400px;
-		  text-align: center;
-		  padding-top: 80px;
-		  margin-bottom: 80px;
-		}
-
-		#esl-levels {
-		  width: 150px;
-		  float: left;
-		  margin-left: 40%;
-		}
-
-		#esl-levels-2014 {
-		  width: 120px;
-		  float: left;
-		  margin-left: 10px;
-		  margin-top: 90px;
-		}
-
-		#esl-levels-2016 {
-		  width: 120px;
-		  float: left;
-		  margin-left: -120px;
-		  margin-top: 405px;
-		}
-
-		#lunch {
-		  width: 600px;
-		  clear: both;
-		  float: left;
-		  margin-left: 100px;
-		  margin-top: 120px;
-		}
-
-		#paint1 {
-		  width: 160px;
-		  float: left;
-		  margin-left: -140px;
-		  margin-top: 520px;
-		}
-
-		#lunch-quote {
-		  width: 200px;
-		  float: left;
-		  margin-left: -40px;
-		  margin-top: 560px;
-		}
-
-		#lunch-para {
-		  width: 300px;
-		  float: right;
-		  margin-right: 100px;
-		}
-
-
-	</style>
 </head>
-<body class="noscroll">
-		<div class="p-layer" id="intro">
-			<div class="container-video">
-				<video id="video-vivian-intro" autoplay onended="startExperience()">
-					<source src="res/video-vivian-intro.mp4" type="video/mp4">
-				</video>
-				<div class="container-story-title">
-					<h4>01.</h4>
-					<h1>Vivian</h1>
-				</div>
-				<img src="img/video-replay.png" alt="replay video button" id="button-replay">
-				<a id="skip-video-link" class="text-link" href="#esl-levels-para">Already seen this? Skip this video.</a>
+<body>
+	<section id="intro">
+		<div class="container-video">
+			<video id="video-vivian-intro" autoplay onended="startExperience()">
+				<!-- <source src="res/video-vivian-intro.mp4" type="video/mp4"> -->
+			</video>
+			<div class="container-story-title">
+				<h4>01.</h4>
+				<h1>Vivian</h1>
 			</div>
+			<img src="img/video-replay.png" alt="replay video button" id="button-replay">
+			<a id="skip-video-link" class="text-link" href="#story-vivian">Already seen this? Skip this video.</a>
 		</div>
-		<div class="p-layer" id="esl-levels-para">
-			<p>I took 4 levels of ESL classes, starting in Level 2 and finishing Level 5 before I could move on to English 10. I took me over a year.
-		</div>
-		<div class="p-layer" id="esl-levels">
-			<img src="img/vivian/a_esl-levels.png">
-		</div>
-		<div class="p-layer" id="esl-levels-2014">
-			<img src="img/vivian/a_esl-levels-2014.png">
-		</div>
-		<div class="p-layer" id="esl-levels-2016">
-			<img src="img/vivian/a_esl-levels-2016.png">
-		</div>
+	</section>
+		
+	<!-- container for all the other assets -->
+	<div class="story-container" id="story-vivian">
 
-		<div class="p-layer" id="lunch">
-			<img src="img/vivian/a_lunch.png">
-		</div>
+		<!-- esl section -->
+		<section class="row" id="esl">
+			<div class="col-full">
+				<p>I took 4 levels of ESL classes, starting in Level 2 and finishing Level 5 before I could move on to English 10. I took me over a year.</p>
+				<img src="img/vivian/a_esl-levels.png">
+			</div>
+		</section>
 
-		<div class="p-layer" id="lunch-para">
-			I hoped to make lots of friends in ESL classes but it was harder because I’m shy. A lot of them were here for a longer time and also spoke better English than me, which made me feel bad. I ate by myself at lunch for the first few months, but I have some friends now. We talk about anime and cosplay, which I love.
-		</div>
+		<!-- lunch section -->
+		<section class="row" id="lunch">
+			<div class="col-left">
+				<img src="img/vivian/a_lunch.png" class="lunch">
+				<img src="img/vivian/a_paint1.png" class="paint">
+				<h2>I wonder if my friends stress about their English the way I do. We don’t really talk about things like that.</h2>
+			</div>
+			<div class="col-right">
+				<p>I hoped to make lots of friends in ESL classes but it was harder because I’m shy. A lot of them were here for a longer time and also spoke better English than me, which made me feel bad. I ate by myself at lunch for the first few months, but I have some friends now. We talk about anime and cosplay, which I love.</p>
+			</div>
+		</section>
 
-		<div class="p-layer" id="paint1">
-			<img src="img/vivian/a_paint1.png">
-		</div>
+		<!-- huh section -->
+		<section class="row" id="huh">
+			<div class="col-full">
+				<p>Even though I didn’t have a lot of friends in my ESL classes, I wish I could have stayed there. I dread my regular classes so much. I am silent during class because I think my accent is ugly and embarrassing.</p>
+				<img src="img/vivian/a_paint2.png">
+				<h2>My worst fear is people asking “Huh?” and “What did you say?” over and over again because I know I can’t communicate it any better.</h2>
+			</div>
+		</section>
 
-		<div class="p-layer" id="lunch-quote">
-			<h2>I wonder if my friends stress about their English the way I do. We don’t really talk about things like that.</h2>
-		</div>
-	
-		<video id="video-vivian-outro">
-			<source src="res/video-vivian-outro.mp4" type="video/mp4">
-		</video>
+		<!-- presentations section -->
+		<section class="row" id="presentations">
+			<div class="col-full">
+				<img src="img/vivian/a_paint3.png" class="paint">
+				<h2>I dread class presentations the most.</h2>
 
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-		<script src="js/video.js"></script>
-		<script src="js/smooth-scroll.js"></script>
+				<img src="img/vivian/a_bored.png" class="bored">
+				<p>During English class we had a spoken word presentation. When my classmates stood at the podium and talked, they had stage presence. Their English was so clean and their expressions were confident. The audience was engaged, laughing and smiling. When I spoke, everyone looked confused and awkward. The mood was completely different. I was so embarrassed.</p>
+			</div>
+		</section>
 
+		<!-- homework section -->
+		<section class="row" id="homework">
+			<div class="col-full">
+				<p>A lot of the time I get confused on what homework we need to do or what the teacher just said, but I’m scared to ask my classmates because I don’t want them to think I’m annoying if I can’t understand them.</p>
+
+				<img src="img/vivian/a_homework.png" class="homework">
+				<img src="img/vivian/a_paint4.png" class="paint">
+				<h2>I feel like my classmates won’t want to help someone who keeps annoying them.</h2>
+			</div>
+		</section>
+
+		<!-- participation section -->
+		<section class="row" id="participation">
+			<div class="col-full">
+				<p>Once, the teacher made us raise our hands and answer questions for a participation mark. I needed any marks because I was close to failing, and I finally found the courage to raise my hand even though I’m terrified of speaking out loud. She kept choosing Canadian students to answer, and ignored the international students.</p>
+				<img src="img/vivian/a_paint5.png" class="paint">
+				<h2>Why did the teacher make international students participate if she was only going to ask for Canadian students’ answers?</h2>
+			</div>
+		</section>
+
+		<section class="row" id="outro">
+			<video id="video-vivian-outro">
+				<source src="res/video-vivian-outro.mp4" type="video/mp4">
+			</video>
+		</section>
+
+		<section class="row" id="assumptions">
+			<div class="col-left">
+				your assumtions
+			</div>
+			<div class="col-right">
+				the real exp
+			</div>
+		</section>
+
+		<section class="row" id="next-story">
+			link to next story
+		</section>
+
+	</div>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="js/video.js"></script>
+	<script src="js/smooth-scroll.js"></script>
 </body>
-
 </html>
