--- a/vivian.html
+++ b/vivian.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html>
 <head>
 	<link rel="stylesheet" href="css/main.css">
@@ -23,60 +24,108 @@
 		<!-- esl section -->
 		<section class="row" id="esl">
 			<div class="col-full">
-				<p>I took 4 levels of ESL classes, starting in Level 2 and finishing Level 5 before I could move on to English 10. I took me over a year.</p>
-				<img src="img/vivian/a_esl-levels.png">
+				<p
+					data-bottom-top="opacity: 0;" 
+					data-center-top="opacity: 1;">
+					I took 4 levels of ESL classes, starting in Level 2 and finishing Level 5 before I could move on to English 10. I took me over a year.
+				</p>
+				<img src="img/vivian/a_esl-levels.png"
+					data-bottom-top="opacity: 0; position: relative; top: 100px;" 
+					data-center-top="opacity: 1;"
+					data-top-bottom="top: -100px;"
+					>
 			</div>
 		</section>
 
 		<!-- lunch section -->
 		<section class="row" id="lunch">
 			<div class="col-left">
-				<img src="img/vivian/a_lunch.png" class="lunch">
-				<img src="img/vivian/a_paint1.png" class="paint">
-				<h2>I wonder if my friends stress about their English the way I do. We don’t really talk about things like that.</h2>
+				<img src="img/vivian/a_lunch.png" class="lunch"
+					data-bottom-top="opacity: 0;" 
+					data-center-top="opacity: 1;"
+					>
+				<img src="img/vivian/a_paint1.png" class="paint"
+					data-bottom-top="opacity: 0;" 
+					data-center-top="opacity: 1;">
+				<h2
+					data-bottom-top="opacity: 0;" 
+					data-center-top="opacity: 1;">
+					I wonder if my friends stress about their English the way I do. We don’t really talk about things like that.</h2>
 			</div>
 			<div class="col-right">
-				<p>I hoped to make lots of friends in ESL classes but it was harder because I’m shy. A lot of them were here for a longer time and also spoke better English than me, which made me feel bad. I ate by myself at lunch for the first few months, but I have some friends now. We talk about anime and cosplay, which I love.</p>
+				<p
+					data-bottom-top="opacity: 0;" 
+					data-center-top="opacity: 1;">
+					I hoped to make lots of friends in ESL classes but it was harder because I’m shy. A lot of them were here for a longer time and also spoke better English than me, which made me feel bad. I ate by myself at lunch for the first few months, but I have some friends now. We talk about anime and cosplay, which I love.</p>
 			</div>
 		</section>
 
 		<!-- huh section -->
 		<section class="row" id="huh">
 			<div class="col-full">
-				<p>Even though I didn’t have a lot of friends in my ESL classes, I wish I could have stayed there. I dread my regular classes so much. I am silent during class because I think my accent is ugly and embarrassing.</p>
-				<img src="img/vivian/a_paint2.png">
-				<h2>My worst fear is people asking “Huh?” and “What did you say?” over and over again because I know I can’t communicate it any better.</h2>
+				<p
+					data-bottom-top="opacity: 0;" 
+					data-center-top="opacity: 1;">Even though I didn’t have a lot of friends in my ESL classes, I wish I could have stayed there. I dread my regular classes so much. I am silent during class because I think my accent is ugly and embarrassing.</p>
+				
+				<img src="img/vivian/a_paint2.png"
+					data-bottom-top="opacity: 0;" 
+					data-center-top="opacity: 1;">
+				<h2
+					data-bottom-top="opacity: 0;" 
+					data-center-top="opacity: 1;">My worst fear is people asking “Huh?” and “What did you say?” over and over again because I know I can’t communicate it any better.</h2>
 			</div>
 		</section>
 
 		<!-- presentations section -->
 		<section class="row" id="presentations">
 			<div class="col-full">
-				<img src="img/vivian/a_paint3.png" class="paint">
-				<h2>I dread class presentations the most.</h2>
+				<img src="img/vivian/a_paint3.png" class="paint"
+					data-bottom-top="opacity: 0;" 
+					data-center-top="opacity: 1;">
+				<h2
+					data-bottom-top="opacity: 0;" 
+					data-center-top="opacity: 1;">I dread class presentations the most.</h2>
 
-				<img src="img/vivian/a_bored.png" class="bored">
-				<p>During English class we had a spoken word presentation. When my classmates stood at the podium and talked, they had stage presence. Their English was so clean and their expressions were confident. The audience was engaged, laughing and smiling. When I spoke, everyone looked confused and awkward. The mood was completely different. I was so embarrassed.</p>
+				<img src="img/vivian/a_bored.png" class="bored"
+					data-bottom-top="opacity: 0;" 
+					data-center-top="opacity: 1;">
+				<p
+					data-bottom-top="opacity: 0;" 
+					data-center-top="opacity: 1;">During English class we had a spoken word presentation. When my classmates stood at the podium and talked, they had stage presence. Their English was so clean and their expressions were confident. The audience was engaged, laughing and smiling. When I spoke, everyone looked confused and awkward. The mood was completely different. I was so embarrassed.</p>
 			</div>
 		</section>
 
 		<!-- homework section -->
 		<section class="row" id="homework">
 			<div class="col-full">
-				<p>A lot of the time I get confused on what homework we need to do or what the teacher just said, but I’m scared to ask my classmates because I don’t want them to think I’m annoying if I can’t understand them.</p>
+				<p
+					data-bottom-top="opacity: 0;" 
+					data-center-top="opacity: 1;">A lot of the time I get confused on what homework we need to do or what the teacher just said, but I’m scared to ask my classmates because I don’t want them to think I’m annoying if I can’t understand them.</p>
 
-				<img src="img/vivian/a_homework.png" class="homework">
-				<img src="img/vivian/a_paint4.png" class="paint">
-				<h2>I feel like my classmates won’t want to help someone who keeps annoying them.</h2>
+				<img src="img/vivian/a_homework.png" class="homework"
+					data-bottom-top="opacity: 0;" 
+					data-center-top="opacity: 1;">
+				<img src="img/vivian/a_paint4.png" class="paint"
+					data-bottom-top="opacity: 0;" 
+					data-center-top="opacity: 1;">
+				<h2
+					data-bottom-top="opacity: 0;" 
+					data-center-top="opacity: 1;">I feel like my classmates won’t want to help someone who keeps annoying them.</h2>
 			</div>
 		</section>
 
 		<!-- participation section -->
 		<section class="row" id="participation">
 			<div class="col-full">
-				<p>Once, the teacher made us raise our hands and answer questions for a participation mark. I needed any marks because I was close to failing, and I finally found the courage to raise my hand even though I’m terrified of speaking out loud. She kept choosing Canadian students to answer, and ignored the international students.</p>
-				<img src="img/vivian/a_paint5.png" class="paint">
-				<h2>Why did the teacher make international students participate if she was only going to ask for Canadian students’ answers?</h2>
+				<p
+					data-bottom-top="opacity: 0;" 
+					data-center-top="opacity: 1;">Once, the teacher made us raise our hands and answer questions for a participation mark. I needed any marks because I was close to failing, and I finally found the courage to raise my hand even though I’m terrified of speaking out loud. She kept choosing Canadian students to answer, and ignored the international students.</p>
+				<img src="img/vivian/a_paint5.png" class="paint"
+					data-bottom-top="opacity: 0;" 
+					data-center-top="opacity: 1;">
+				<h2
+					data-bottom-top="opacity: 0;" 
+					data-center-top="opacity: 1;">Why did the teacher make international students participate if she was only going to ask for Canadian students’ answers?</h2>
 			</div>
 		</section>
 
@@ -101,8 +150,16 @@
 
 	</div>
 
+	
+
+	<script src="js/skrollr.min.js"></script>
+	<script>
+		var s = skrollr.init();
+	</script>
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="js/video.js"></script>
 	<script src="js/smooth-scroll.js"></script>
 </body>
 </html>
+
