fixed video link not working issue, styles and repositions elements, adds all elements in

--- a/vivian.html
+++ b/vivian.html
@@ -7,7 +7,7 @@
 	<section id="intro">
 		<div class="container-video">
 			<video id="video-vivian-intro" autoplay onended="startExperience()">
-				<!-- <source src="res/video-vivian-intro.mp4" type="video/mp4"> -->
+				<source src="res/video-vivian-intro.mp4" type="video/mp4">
 			</video>
 			<div class="container-story-title">
 				<h4>01.</h4>
@@ -17,7 +17,7 @@
 			<a id="skip-video-link" class="text-link" href="#story-vivian">Already seen this? Skip this video.</a>
 		</div>
 	</section>
-		
+
 	<!-- container for all the other assets -->
 	<div class="story-container" id="story-vivian">
 
@@ -25,12 +25,12 @@
 		<section class="row" id="esl">
 			<div class="col-full">
 				<p
-					data-bottom-top="opacity: 0;" 
+					data-bottom-top="opacity: 0;"
 					data-center-top="opacity: 1;">
 					I took 4 levels of ESL classes, starting in Level 2 and finishing Level 5 before I could move on to English 10. I took me over a year.
 				</p>
 				<img src="img/vivian/a_esl-levels.png"
-					data-bottom-top="opacity: 0; position: relative; top: 100px;" 
+					data-bottom-top="opacity: 0; position: relative; top: 100px;"
 					data-center-top="opacity: 1;"
 					data-top-bottom="top: -100px;"
 					>
@@ -41,20 +41,20 @@
 		<section class="row" id="lunch">
 			<div class="col-left">
 				<img src="img/vivian/a_lunch.png" class="lunch"
-					data-bottom-top="opacity: 0;" 
+					data-bottom-top="opacity: 0;"
 					data-center-top="opacity: 1;"
 					>
 				<img src="img/vivian/a_paint1.png" class="paint"
-					data-bottom-top="opacity: 0;" 
+					data-bottom-top="opacity: 0;"
 					data-center-top="opacity: 1;">
 				<h2
-					data-bottom-top="opacity: 0;" 
+					data-bottom-top="opacity: 0;"
 					data-center-top="opacity: 1;">
 					I wonder if my friends stress about their English the way I do. We don’t really talk about things like that.</h2>
 			</div>
 			<div class="col-right">
 				<p
-					data-bottom-top="opacity: 0;" 
+					data-bottom-top="opacity: 0;"
 					data-center-top="opacity: 1;">
 					I hoped to make lots of friends in ESL classes but it was harder because I’m shy. A lot of them were here for a longer time and also spoke better English than me, which made me feel bad. I ate by myself at lunch for the first few months, but I have some friends now. We talk about anime and cosplay, which I love.</p>
 			</div>
@@ -64,14 +64,14 @@
 		<section class="row" id="huh">
 			<div class="col-full">
 				<p
-					data-bottom-top="opacity: 0;" 
+					data-bottom-top="opacity: 0;"
 					data-center-top="opacity: 1;">Even though I didn’t have a lot of friends in my ESL classes, I wish I could have stayed there. I dread my regular classes so much. I am silent during class because I think my accent is ugly and embarrassing.</p>
-				
+
 				<img src="img/vivian/a_paint2.png"
-					data-bottom-top="opacity: 0;" 
+					data-bottom-top="opacity: 0;"
 					data-center-top="opacity: 1;">
 				<h2
-					data-bottom-top="opacity: 0;" 
+					data-bottom-top="opacity: 0;"
 					data-center-top="opacity: 1;">My worst fear is people asking “Huh?” and “What did you say?” over and over again because I know I can’t communicate it any better.</h2>
 			</div>
 		</section>
@@ -80,17 +80,17 @@
 		<section class="row" id="presentations">
 			<div class="col-full">
 				<img src="img/vivian/a_paint3.png" class="paint"
-					data-bottom-top="opacity: 0;" 
+					data-bottom-top="opacity: 0;"
 					data-center-top="opacity: 1;">
 				<h2
-					data-bottom-top="opacity: 0;" 
+					data-bottom-top="opacity: 0;"
 					data-center-top="opacity: 1;">I dread class presentations the most.</h2>
 
 				<img src="img/vivian/a_bored.png" class="bored"
-					data-bottom-top="opacity: 0;" 
+					data-bottom-top="opacity: 0;"
 					data-center-top="opacity: 1;">
 				<p
-					data-bottom-top="opacity: 0;" 
+					data-bottom-top="opacity: 0;"
 					data-center-top="opacity: 1;">During English class we had a spoken word presentation. When my classmates stood at the podium and talked, they had stage presence. Their English was so clean and their expressions were confident. The audience was engaged, laughing and smiling. When I spoke, everyone looked confused and awkward. The mood was completely different. I was so embarrassed.</p>
 			</div>
 		</section>
@@ -99,17 +99,17 @@
 		<section class="row" id="homework">
 			<div class="col-full">
 				<p
-					data-bottom-top="opacity: 0;" 
+					data-bottom-top="opacity: 0;"
 					data-center-top="opacity: 1;">A lot of the time I get confused on what homework we need to do or what the teacher just said, but I’m scared to ask my classmates because I don’t want them to think I’m annoying if I can’t understand them.</p>
 
 				<img src="img/vivian/a_homework.png" class="homework"
-					data-bottom-top="opacity: 0;" 
+					data-bottom-top="opacity: 0;"
 					data-center-top="opacity: 1;">
 				<img src="img/vivian/a_paint4.png" class="paint"
-					data-bottom-top="opacity: 0;" 
+					data-bottom-top="opacity: 0;"
 					data-center-top="opacity: 1;">
 				<h2
-					data-bottom-top="opacity: 0;" 
+					data-bottom-top="opacity: 0;"
 					data-center-top="opacity: 1;">I feel like my classmates won’t want to help someone who keeps annoying them.</h2>
 			</div>
 		</section>
@@ -118,39 +118,50 @@
 		<section class="row" id="participation">
 			<div class="col-full">
 				<p
-					data-bottom-top="opacity: 0;" 
+					data-bottom-top="opacity: 0;"
 					data-center-top="opacity: 1;">Once, the teacher made us raise our hands and answer questions for a participation mark. I needed any marks because I was close to failing, and I finally found the courage to raise my hand even though I’m terrified of speaking out loud. She kept choosing Canadian students to answer, and ignored the international students.</p>
 				<img src="img/vivian/a_paint5.png" class="paint"
-					data-bottom-top="opacity: 0;" 
+					data-bottom-top="opacity: 0;"
 					data-center-top="opacity: 1;">
 				<h2
-					data-bottom-top="opacity: 0;" 
+					data-bottom-top="opacity: 0;"
 					data-center-top="opacity: 1;">Why did the teacher make international students participate if she was only going to ask for Canadian students’ answers?</h2>
 			</div>
 		</section>
+	</div> <!-- end story-container div -->
 
-		<section class="row" id="outro">
-			<video id="video-vivian-outro">
-				<source src="res/video-vivian-outro.mp4" type="video/mp4">
-			</video>
-		</section>
+	<section class="row" id="outro">
+		<video id="video-vivian-outro">
+			<source src="res/video-vivian-outro.mp4" type="video/mp4">
+		</video>
+	</section>
 
-		<section class="row" id="assumptions">
-			<div class="col-left">
-				your assumtions
-			</div>
-			<div class="col-right">
-				the real exp
-			</div>
-		</section>
+	<section class="row" id="assumptions">
+		<div class="col-left">
+			<h3>Your Assumptions</h3>
+			<ul>
+				<li>They are usually too quiet during presentations and discussions and they should speak up.</li>
+				<li>They’re annoying to work with because they never pull their weight. They contribute the minimum. I have to do most of the work.</li>
+			</ul>
+		</div>
+		<div class="col-right">
+			<h3>Vivian's Experience</h3>
+			<ul>
+				<li>I am so embarrassed about my accent and I always fear saying the wrong thing.</li>
+				<li>Canadian students don’t trust me with group work because I seem stupid. It’s very difficult trying to learn new concepts taught in class and English at the same time.</li>
+			</ul>
+		</div>
+	</section>
 
-		<section class="row" id="next-story">
-			link to next story
-		</section>
+	<section class="row" id="next-story">
+		<img src="img/grant/paint-next-story.png" alt="green paint smear">
+		<div class="container-next-story-title">
+			<h6>02.</h6>
+			<h5>Grant</h5>
+		</div>
+	</section>
 
-	</div>
 
-	
 
 	<script src="js/skrollr.min.js"></script>
 	<script>
@@ -162,4 +173,3 @@
 	<script src="js/smooth-scroll.js"></script>
 </body>
 </html>
-
