--- a/vivian.html
+++ b/vivian.html
@@ -41,15 +41,15 @@
 		<section class="row" id="lunch">
 			<div class="col-left">
 				<img src="img/vivian/a_lunch.png" class="lunch"
-					data-bottom-top="opacity: 0;"
-					data-center-top="opacity: 1;"
+					data-bottom-top="opacity: 0; left: -100px;"
+					data-center-top="opacity: 1; left: 0;"
 					>
 				<img src="img/vivian/a_paint1.png" class="paint"
-					data-bottom-top="opacity: 0;"
-					data-center-top="opacity: 1;">
+					data-bottom-top="opacity: 0; right: 370px;"
+					data-center-top="opacity: 1; right: 350px;">
 				<h2
-					data-bottom-top="opacity: 0;"
-					data-center-top="opacity: 1;">
+					data-bottom-top="opacity: 0; right: 30px;"
+					data-center-top="opacity: 1; right: 0px;">
 					I wonder if my friends stress about their English the way I do. We don’t really talk about things like that.</h2>
 			</div>
 			<div class="col-right">
@@ -64,8 +64,8 @@
 		<section class="row" id="huh">
 			<div class="col-full">
 				<p
-					data-bottom-top="opacity: 0;"
-					data-center-top="opacity: 1;">Even though I didn’t have a lot of friends in my ESL classes, I wish I could have stayed there. I dread my regular classes so much. I am silent during class because I think my accent is ugly and embarrassing.</p>
+					data-bottom-top="opacity: 0; top: 150px;"
+					data-top-bottom="opacity: 1; top: 0px;">Even though I didn’t have a lot of friends in my ESL classes, I wish I could have stayed there. I dread my regular classes so much. I am silent during class because I think my accent is ugly and embarrassing.</p>
 
 				<img src="img/vivian/a_paint2.png"
 					data-bottom-top="opacity: 0;"
@@ -80,11 +80,12 @@
 		<section class="row" id="presentations">
 			<div class="col-full">
 				<img src="img/vivian/a_paint3.png" class="paint"
-					data-bottom-top="opacity: 0;"
-					data-center-top="opacity: 1;">
+					data-bottom-top="opacity: 0;;"
+					data-center-top="opacity: 1;"
+					>
 				<h2
-					data-bottom-top="opacity: 0;"
-					data-center-top="opacity: 1;">I dread class presentations the most.</h2>
+					data-bottom-top="opacity: 0; top: 350px;"
+					data-top-bottom="opacity: 1; top: 250px;">I dread class presentations the most.</h2>
 
 				<img src="img/vivian/a_bored.png" class="bored"
 					data-bottom-top="opacity: 0;"
@@ -104,13 +105,16 @@
 
 				<img src="img/vivian/a_homework.png" class="homework"
 					data-bottom-top="opacity: 0;"
-					data-center-top="opacity: 1;">
+					data-center-top="opacity: 1;"
+					>
 				<img src="img/vivian/a_paint4.png" class="paint"
 					data-bottom-top="opacity: 0;"
-					data-center-top="opacity: 1;">
+					data-center-top="opacity: 1;"
+					>
 				<h2
-					data-bottom-top="opacity: 0;"
-					data-center-top="opacity: 1;">I feel like my classmates won’t want to help someone who keeps annoying them.</h2>
+					data-bottom-top="opacity: 0; right: 200px;"
+					data-center-top="opacity: 1; right: 100px;"
+					>I feel like my classmates won’t want to help someone who keeps annoying them.</h2>
 			</div>
 		</section>
 
@@ -124,8 +128,8 @@
 					data-bottom-top="opacity: 0;"
 					data-center-top="opacity: 1;">
 				<h2
-					data-bottom-top="opacity: 0;"
-					data-center-top="opacity: 1;">Why did the teacher make international students participate if she was only going to ask for Canadian students’ answers?</h2>
+					data-bottom-top="opacity: 0; bottom: 0px;"
+					data-top-bottom="opacity: 1; bottom: 50px;">Why did the teacher make international students participate if she was only going to ask for Canadian students’ answers?</h2>
 			</div>
 		</section>
 	</div> <!-- end story-container div -->
