animates assumptions vs experience

--- a/vivian.html
+++ b/vivian.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/animation.css">
 </head>
 <body>
 	<section id="intro">
@@ -175,5 +176,6 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="js/video.js"></script>
 	<script src="js/smooth-scroll.js"></script>
+	<script src="js/assumptions-experience-fade-in.js"></script>
 </body>
 </html>
