--- a/vivian.html
+++ b/vivian.html
@@ -143,17 +143,17 @@
 
 	<section class="row" id="assumptions">
 		<div class="col-left">
-			<h3>Your Assumptions</h3>
-			<ul>
-				<li>They are usually too quiet during presentations and discussions and they should speak up.</li>
-				<li>They’re annoying to work with because they never pull their weight. They contribute the minimum. I have to do most of the work.</li>
-			</ul>
-		</div>
-		<div class="col-right">
 			<h3>Vivian's Experience</h3>
 			<ul>
 				<li>I am so embarrassed about my accent and I always fear saying the wrong thing.</li>
 				<li>Canadian students don’t trust me with group work because I seem stupid. It’s very difficult trying to learn new concepts taught in class and English at the same time.</li>
+			</ul>
+		</div>
+		<div class="col-right">
+			<h3>Your Perspective</h3>
+			<ul>
+				<li>They are usually too quiet during presentations and discussions and they should speak up.</li>
+				<li>They’re annoying to work with because they never pull their weight. They contribute the minimum. I have to do most of the work.</li>
 			</ul>
 		</div>
 	</section>
