--- a/vivian.html
+++ b/vivian.html
@@ -46,11 +46,12 @@
 					data-center-top="opacity: 1; left: 0;"
 					>
 				<img src="img/vivian/a_paint1.png" class="paint"
-					data-bottom-top="opacity: 0; right: 370px;"
+					data-bottom-top="opacity: 0; right: 360px;"
 					data-center-top="opacity: 1; right: 350px;">
 				<h2
 					data-bottom-top="opacity: 0; right: 30px;"
-					data-center-top="opacity: 1; right: 0px;">
+					data-center-top="opacity: 1; right: 15px;"
+					data-top-bottom="opacity: 1; right: 0px;">
 					I wonder if my friends stress about their English the way I do. We don’t really talk about things like that.</h2>
 			</div>
 			<div class="col-right">
@@ -65,15 +66,19 @@
 		<section class="row" id="huh">
 			<div class="col-full">
 				<p
-					data-bottom-top="opacity: 0; top: 150px;"
-					data-top-bottom="opacity: 1; top: 0px;">Even though I didn’t have a lot of friends in my ESL classes, I wish I could have stayed there. I dread my regular classes so much. I am silent during class because I think my accent is ugly and embarrassing.</p>
+					data-bottom-top="opacity: 0;"
+					data-center-top="opacity: 1;"
+					>Even though I didn’t have a lot of friends in my ESL classes, I wish I could have stayed there. I dread my regular classes so much. I am silent during class because I think my accent is ugly and embarrassing.</p>
 
 				<img src="img/vivian/a_paint2.png"
 					data-bottom-top="opacity: 0;"
-					data-center-top="opacity: 1;">
+					data-top-bottom="opacity: 1;"
+					>
 				<h2
-					data-bottom-top="opacity: 0;"
-					data-center-top="opacity: 1;">My worst fear is people asking “Huh?” and “What did you say?” over and over again because I know I can’t communicate it any better.</h2>
+					data-bottom-top="opacity: 0; top: 350px;"
+					data-center-top="opacity: 1; top: 250px;"
+					data-top-bottom="opacity: 1; top: 150px;"
+					>My worst fear is people asking “Huh?” and “What did you say?” over and over again because I know I can’t communicate it any better.</h2>
 			</div>
 		</section>
 
@@ -113,8 +118,9 @@
 					data-center-top="opacity: 1;"
 					>
 				<h2
-					data-bottom-top="opacity: 0; right: 200px;"
-					data-center-top="opacity: 1; right: 100px;"
+					data-bottom-top="opacity: 0; right: 150px;"
+					data-center-top="opacity: 1; right: 125px;"
+					data-top-bottom="opacity: 1; right: 100px;"
 					>I feel like my classmates won’t want to help someone who keeps annoying them.</h2>
 			</div>
 		</section>
