--- a/vivian.html
+++ b/vivian.html
@@ -3,6 +3,7 @@
 <head>
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/animation.css">
+	<!-- <link rel="stylesheet" href="css/fade-in.css"> -->
 </head>
 <body>
 	<section id="intro">
