changed assumption animation to fade horizontally

--- a/vivian.html
+++ b/vivian.html
@@ -152,15 +152,15 @@
 		<div class="col-left">
 			<h3>Vivian's Experience</h3>
 			<ul>
-				<li>I am so embarrassed about my accent and I always fear saying the wrong thing.</li>
-				<li>Canadian students don’t trust me with group work because I seem stupid. It’s very difficult trying to learn new concepts taught in class and English at the same time.</li>
+				<li id="assumptions-li-0">I am so embarrassed about my accent and I always fear saying the wrong thing.</li>
+				<li id="assumptions-li-2">Canadian students don’t trust me with group work because I seem stupid. It’s very difficult trying to learn new concepts taught in class and English at the same time.</li>
 			</ul>
 		</div>
 		<div class="col-right">
 			<h3>Your Perspective</h3>
 			<ul>
-				<li>They are usually too quiet during presentations and discussions and they should speak up.</li>
-				<li>They’re annoying to work with because they never pull their weight. They contribute the minimum. I have to do most of the work.</li>
+				<li id="assumptions-li-1">They are usually too quiet during presentations and discussions and they should speak up.</li>
+				<li id="assumptions-li-3">They’re annoying to work with because they never pull their weight. They contribute the minimum. I have to do most of the work.</li>
 			</ul>
 		</div>
 	</section>
