added no scrollback

--- a/vivian.html
+++ b/vivian.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="css/animation.css">
 	<!-- <link rel="stylesheet" href="css/fade-in.css"> -->
 </head>
-<body>
+<body class="noscroll">
 	<section id="intro">
 		<div class="container-video">
 			<video id="video-vivian-intro" autoplay onended="startExperience()">
@@ -173,16 +173,14 @@
 		</div>
 	</section>
 
-
-
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="js/skrollr.min.js"></script>
 	<script>
 		var s = skrollr.init();
-	</script>
-
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	</script>	
 	<script src="js/video.js"></script>
 	<script src="js/smooth-scroll.js"></script>
 	<script src="js/assumptions-experience-fade-in.js"></script>
+	
 </body>
 </html>
