--- a/vivian.html
+++ b/vivian.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="css/animation.css">
 	<!-- <link rel="stylesheet" href="css/fade-in.css"> -->
 </head>
-<body class="noscroll">
+<body class="noscroll" id="skrollr-body">
 	<section id="intro">
 		<div class="container-video">
 			<video id="video-vivian-intro" autoplay onended="startExperience()">
@@ -53,13 +53,13 @@
 					data-bottom-top="opacity: 0; right: 30px;"
 					data-center-top="opacity: 1; right: 15px;"
 					data-top-bottom="opacity: 1; right: 0px;">
-					I wonder if my friends stress about their English the way I do. We don’t really talk about things like that.</h2>
+					I wonder if my friends stress about their English the way I do. We don't really talk about things like that.</h2>
 			</div>
 			<div class="col-right">
 				<p
 					data-bottom-top="opacity: 0;"
 					data-center-top="opacity: 1;">
-					I hoped to make lots of friends in ESL classes but it was harder because I’m shy. A lot of them were here for a longer time and also spoke better English than me, which made me feel bad. I ate by myself at lunch for the first few months, but I have some friends now. We talk about anime and cosplay, which I love.</p>
+					I hoped to make lots of friends in ESL classes but it was harder because I'm shy. A lot of them were here for a longer time and also spoke better English than me, which made me feel bad. I ate by myself at lunch for the first few months, but I have some friends now. We talk about anime and cosplay, which I love.</p>
 			</div>
 		</section>
 
@@ -69,7 +69,7 @@
 				<p
 					data-bottom-top="opacity: 0;"
 					data-center-top="opacity: 1;"
-					>Even though I didn’t have a lot of friends in my ESL classes, I wish I could have stayed there. I dread my regular classes so much. I am silent during class because I think my accent is ugly and embarrassing.</p>
+					>Even though I didn't have a lot of friends in my ESL classes, I wish I could have stayed there. I dread my regular classes so much. I am silent during class because I think my accent is ugly and embarrassing.</p>
 
 				<img src="img/vivian/a_paint2.png"
 					data-bottom-top="opacity: 0;"
@@ -79,7 +79,7 @@
 					data-bottom-top="opacity: 0; top: 350px;"
 					data-center-top="opacity: 1; top: 250px;"
 					data-top-bottom="opacity: 1; top: 150px;"
-					>My worst fear is people asking “Huh?” and “What did you say?” over and over again because I know I can’t communicate it any better.</h2>
+					>My worst fear is people asking "Huh?" and "What did you say?" over and over again because I know I can't communicate it any better.</h2>
 			</div>
 		</section>
 
@@ -108,7 +108,7 @@
 			<div class="col-full">
 				<p
 					data-bottom-top="opacity: 0;"
-					data-center-top="opacity: 1;">A lot of the time I get confused on what homework we need to do or what the teacher just said, but I’m scared to ask my classmates because I don’t want them to think I’m annoying if I can’t understand them.</p>
+					data-center-top="opacity: 1;">A lot of the time I get confused on what homework we need to do or what the teacher just said, but I'm scared to ask my classmates because I don't want them to think I'm annoying if I can't understand them.</p>
 
 				<img src="img/vivian/a_homework.png" class="homework"
 					data-bottom-top="opacity: 0;"
@@ -122,7 +122,7 @@
 					data-bottom-top="opacity: 0; right: 150px;"
 					data-center-top="opacity: 1; right: 125px;"
 					data-top-bottom="opacity: 1; right: 100px;"
-					>I feel like my classmates won’t want to help someone who keeps annoying them.</h2>
+					>I feel like my classmates won't want to help someone who keeps annoying them.</h2>
 			</div>
 		</section>
 
@@ -131,13 +131,13 @@
 			<div class="col-full">
 				<p
 					data-bottom-top="opacity: 0;"
-					data-center-top="opacity: 1;">Once, the teacher made us raise our hands and answer questions for a participation mark. I needed any marks because I was close to failing, and I finally found the courage to raise my hand even though I’m terrified of speaking out loud. She kept choosing Canadian students to answer, and ignored the international students.</p>
+					data-center-top="opacity: 1;">Once, the teacher made us raise our hands and answer questions for a participation mark. I needed any marks because I was close to failing, and I finally found the courage to raise my hand even though I'm terrified of speaking out loud. She kept choosing Canadian students to answer, and ignored the international students.</p>
 				<img src="img/vivian/a_paint5.png" class="paint"
 					data-bottom-top="opacity: 0;"
 					data-center-top="opacity: 1;">
 				<h2
 					data-bottom-top="opacity: 0; bottom: 0px;"
-					data-top-bottom="opacity: 1; bottom: 50px;">Why did the teacher make international students participate if she was only going to ask for Canadian students’ answers?</h2>
+					data-top-bottom="opacity: 1; bottom: 50px;">Why did the teacher make international students participate if she was only going to ask for Canadian students' answers?</h2>
 			</div>
 		</section>
 	</div> <!-- end story-container div -->
@@ -153,14 +153,14 @@
 			<h3>Vivian's Experience</h3>
 			<ul>
 				<li id="assumptions-li-0">I am so embarrassed about my accent and I always fear saying the wrong thing.</li>
-				<li id="assumptions-li-2">Canadian students don’t trust me with group work because I seem stupid. It’s very difficult trying to learn new concepts taught in class and English at the same time.</li>
+				<li id="assumptions-li-2">Canadian students don't trust me with group work because I seem stupid. It's very difficult trying to learn new concepts taught in class and English at the same time.</li>
 			</ul>
 		</div>
 		<div class="col-right">
 			<h3>Your Perspective</h3>
 			<ul>
 				<li id="assumptions-li-1">They are usually too quiet during presentations and discussions and they should speak up.</li>
-				<li id="assumptions-li-3">They’re annoying to work with because they never pull their weight. They contribute the minimum. I have to do most of the work.</li>
+				<li id="assumptions-li-3">They're annoying to work with because they never pull their weight. They contribute the minimum. I have to do most of the work.</li>
 			</ul>
 		</div>
 	</section>
