finishes home page and quiz fadey

--- a/index.html
+++ b/index.html
@@ -2,10 +2,26 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/animation.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>They Are Your Classmates</title>
 	</head>
 	<body>
-		siiiiiiick
+		<header id="bg-index">
+			<div id="container-classroom-infographic">
+				<img id="infographic" src="img/index-infographic.png" alt="line isometric drawing of a classroom">
+				<img id="brush-stroke-1" src="img/index-infographic-brush1.png" alt="yellow brush stroke">
+				<img id="brush-stroke-2" src="img/index-infographic-brush2.png" alt="yellow brush stroke">
+			</div>
+			<p id="index-para-fade-1" class="para-fade">Between 2004 and 2015, the number of Chinese international students in Canada <strong>tripled</strong> from about 40,000 to 12,000 students.</p>
+			<p id="index-para-fade-2" class="para-fade">Chinese international students have become a real, strong presence in our country. You’ve likely walked down the school hallways with them, lined up for cafeteria food alongside them, and had classes with them.</p>
+			<div id="index-container-fade-3">
+				<p class="para-fade">What are your thoughts on these Chinese international students?</p>
+				<a class="button-default" href="questions.html">Share your thoughts</a>
+			</div>
+		</header>
+
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	</body>
 </html>
