--- a/vivian.html
+++ b/vivian.html
@@ -18,7 +18,7 @@
 					<h1>Vivian</h1>
 				</div>
 				<img src="img/video-replay.png" alt="replay video button" id="button-replay">
-				<a id="skip-video-link" class="text-link" href="#story-vivian">Already seen this? Skip this video.</a>
+				<a id="skip-video-link" class="text-link skip-video-link-playing" href="#story-vivian">Already seen this? Skip this video.</a>
 			</div>
 		</section>
 
