Fixes skrollr race condition and replaces bad fonts with woff

--- a/vivian.html
+++ b/vivian.html
@@ -181,9 +181,7 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="js/skrollr.min.js"></script>
-	<script>
-		var s = skrollr.init();
-	</script>
+	<script src="js/skrollr-story.js"></script>
 	<script src="js/video.js"></script>
 	<script src="js/smooth-scroll.js"></script>
 	<script src="js/assumptions-experience-fade-in.js"></script>
