skip link bounces, fixes video bug, link to stories on home page

--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
 			<p id="index-para-fade-2" class="para-fade">Chinese international students have become a real, strong presence in our country. You’ve likely walked down the school hallways with them, lined up for cafeteria food alongside them, and had classes with them.</p>
 			<div id="index-container-fade-3">
 				<p class="para-fade">What are your thoughts on these Chinese international students?</p>
-				<a class="button-default" href="questions.html">Share your thoughts</a>
+				<a id="button-share-thoughts" class="button-default" href="questions.html">Share your thoughts</a>
 			</div>
+			<a class="text-link" id="thanks-link" href="#">THANKS TO</a>
+			<a class="text-link" id="view-stories-link" href="stories.html">VIEW STORIES</a>
 		</header>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+		<script src="js/disable-click.js"></script>
 	</body>
 </html>
