--- a/stories.html
+++ b/stories.html
@@ -53,6 +53,6 @@
 			</section>
 		</section>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-		<script src="js/stories.js"></script>
+		<script src="js/disable-click.js"></script>
 	</body>
 </html>
