audio plays on scroll

--- a/vivian.html
+++ b/vivian.html
@@ -51,17 +51,20 @@
 					<img src="img/vivian/a_paint1.png" class="paint"
 						data-bottom-top="opacity: 0; right: 360px;"
 						data-center-top="opacity: 1; right: 350px;">
-					<h2
-						data-bottom-top="opacity: 0; bottom: -20px;"
+					<h2 id="quote-worry"
+						data-bottom-top="opacity: 0; bottom: -30px;"
 						data-center-top="opacity: 1; bottom: -5px;"
 						data-top-bottom="opacity: 1; bottom: 10px;">
-						I wonder if my friends stress about their English the way I do. We don't really talk about things like that.</h2>
+						I wonder if my friends worry about their English the way I do.</h2>
+					<audio id="audio-vivian-worry">
+						<source src="res/vivian-quote-worry-eng.mp3" type="audio/mpeg">
+					</audio>
 				</div>
 				<div class="col-right">
 					<p
 						data-bottom-top="opacity: 0;"
 						data-center-top="opacity: 1;">
-						I hoped to make lots of friends in ESL classes but it was harder because I'm shy. A lot of them were here for a longer time and also spoke better English than me, which made me feel bad. I ate by myself at lunch for the first few months, but I have some friends now. We talk about anime and cosplay, which I love.</p>
+						I hoped to make lots of friends in ESL classes but it was harder because I’m shy. A lot of them were here for a longer time and also spoke better English than me, which made me feel bad. I ate by myself at lunch for the first few months, but I have some friends now. We talk about anime and cosplay, which I love.</p>
 				</div>
 			</section>
 
@@ -77,11 +80,14 @@
 						data-bottom-top="opacity: 0;"
 						data-top-bottom="opacity: 1;"
 						>
-					<h2
+					<h2 id="quote-huh"
 						data-bottom-top="opacity: 0; top: 350px;"
 						data-center-top="opacity: 1; top: 250px;"
 						data-top-bottom="opacity: 1; top: 150px;"
-						>My worst fear is people asking "Huh?" and "What did you say?" over and over again because I know I can't communicate it any better.</h2>
+						>My worst fear is people asking "Huh?" and "What did you say?" over and over again.</h2>
+					<audio id="audio-vivian-huh">
+						<source src="res/vivian-quote-huh-eng.mp3" type="audio/mpeg">
+					</audio>
 				</div>
 			</section>
 
@@ -120,11 +126,14 @@
 						data-bottom-top="opacity: 0;"
 						data-center-top="opacity: 1;"
 						>
-					<h2
+					<h2 id="quote-annoying"
 						data-bottom-top="opacity: 0; right: 150px;"
 						data-center-top="opacity: 1; right: 125px;"
 						data-top-bottom="opacity: 1; right: 100px;"
-						>I feel like my classmates won't want to help someone who keeps annoying them.</h2>
+						>I feel like I’m annoying my classmates when I keep asking for help.</h2>
+					<audio id="audio-vivian-annoying">
+						<source src="res/vivian-quote-annoying-eng.mp3" type="audio/mpeg">
+					</audio>
 				</div>
 			</section>
 
@@ -133,13 +142,24 @@
 				<div class="col-full">
 					<p
 						data-bottom-top="opacity: 0;"
-						data-center-top="opacity: 1;">Once, the teacher made us raise our hands and answer questions for a participation mark. I needed any marks because I was close to failing, and I finally found the courage to raise my hand even though I'm terrified of speaking out loud. She kept choosing Canadian students to answer, and ignored the international students.</p>
+						data-center-top="opacity: 1;">Once, the teacher made us raise our hands and answer questions for a participation mark. I needed any marks because I was close to failing, and I finally found the courage to raise my hand even though I’m terrified of speaking out loud. She kept choosing Canadian students to answer, and ignored the international students. Why did the teacher make international students participate if she was only going to ask for Canadian students’ answers?</p>
 					<img src="img/vivian/a_paint5.png" class="paint"
 						data-bottom-top="opacity: 0;"
 						data-center-top="opacity: 1;">
-					<h2
+					<h2 id="quote-contribute"
 						data-bottom-top="opacity: 0; bottom: 0px;"
-						data-top-bottom="opacity: 1; bottom: 50px;">Why did the teacher make international students participate if she was only going to ask for Canadian students' answers?</h2>
+						data-top-bottom="opacity: 1; bottom: 50px;">When I don’t contribute, it’s not because I don’t want to. It’s because I don’t know how to say my ideas.</h2>
+					<audio id="audio-vivian-contribute">
+						<source src="res/vivian-quote-contribute-eng.mp3" type="audio/mpeg">
+					</audio>
+				</div>
+			</section>
+
+			<section class="row" id="projects">
+				<div class="col-full">
+					<p
+						data-bottom-top="opacity: 0;"
+						data-center-top="opacity: 1;">I understand why my groupmates don’t give me a lot to do during projects. It’s difficult to learn new concepts taught in class and English at the same time. I have to translate every few words from the textbook into Chinese to help me understand, which takes hours. I’m sorry if I’m useless, but I promise I’m trying not to be.</p>
 				</div>
 			</section>
 		</div> <!-- end story-container div -->
@@ -181,7 +201,6 @@
 	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script src="js/isInViewport.min.js"></script>
 	<script src="js/skrollr.min.js"></script>
 	<script src="js/skrollr-story.js"></script>
 	<script src="js/video.js"></script>
